[package]
name = "grouppay_stellar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decentralized group bill-splitting and escrow on Stellar"
authors = ["GroupPay Stellar Contributors"]
repository = "https://github.com/YOUR_ORG/grouppay-stellar"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true